...
              </Text>
            </TouchableOpacity>

            <TouchableOpacity
              style={Styles.button}
              onPress={handleExportContact}
              testID="export-contact-button"
            >
              <MaterialCommunityIcons
                name="share-variant"
                size={20}
                color="#fff"
              />
...
